--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -50,4 +50,17 @@
 
     <include layout="@layout/content_detail" />
 
+    <!--<include layout="@layout/review_fragment" />-->
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|end"
+        app:backgroundTint="@color/whiteCo"
+        app:srcCompat="@drawable/ic_favorite_border_black_24dp" />
+
 </android.support.design.widget.CoordinatorLayout>
