--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="detail_backdrop_height">350dp</dimen>
+
+    <dimen name="popup_width">250dp</dimen>
+    <dimen name="popup_height">350dp</dimen>
 </resources>
