--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_movie"
-    android:layout_width="170dp"
-    android:layout_height="250dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:elevation="4dp"
     android:layout_marginTop="4dp"
     android:layout_marginStart="8dp"
@@ -18,15 +18,16 @@
     xmlns:tool="http://schemas.android.com/tools">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="250dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/poster_path_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tool:src="@drawable/poster_image"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            />
 
     </RelativeLayout>
 
