re-factoring app due to rotation problem

--- a/app/src/main/res/layout/key_details_layout.xml
+++ b/app/src/main/res/layout/key_details_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:src="@drawable/poster_image"
+                tool:src="@drawable/poster_image"
                 />
 
             <LinearLayout
